2018-01-29  Palmer Dabbelt  <palmer@sifive.com>

	* sysdeps/init_array/crti.S (.section .init_array): Add
	PREINIT_FUNCTION when defined.
	* manual/math.texi: RISC-V supports _Float128 and _Float64x.
	* config.h.in: Regenerate.
	* manual/platform.texi: Add RISC-V documenation for
	__riscv_flush_icache.
	* sysdeps/riscv/__longjmp.S: New file.
	* sysdeps/riscv/backtrace.c: Likewise.
	* sysdeps/riscv/bits/endian.h: Likewise.
	* sysdeps/riscv/bits/setjmp.h: Likewise.
	* sysdeps/riscv/bits/wordsize.h: Likewise.
	* sysdeps/riscv/bsd-_setjmp.c: Likewise.
	* sysdeps/riscv/bsd-setjmp.c: Likewise.
	* sysdeps/riscv/dl-trampoline.S: Likewise.
	* sysdeps/riscv/gccframe.h: Likewise.
	* sysdeps/riscv/jmpbuf-offsets.h: Likewise.
	* sysdeps/riscv/jmpbuf-unwind.h: Likewise.
	* sysdeps/riscv/machine-gmon.h: Likewise.
	* sysdeps/riscv/memusage.h: Likewise.
	* sysdeps/riscv/setjmp.S: Likewise.
	* sysdeps/riscv/sys/asm.h: Likewise.
	* sysdeps/riscv/tls-macros.h: Likewise.
	* sysdeps/riscv/dl-tls.h: New file.
	* sysdeps/riscv/libc-tls.c: Likewise.
	* sysdeps/riscv/nptl/tcb-offsets.sym: Likewise.
	* sysdeps/riscv/nptl/tls.h: Likewise.
	* sysdeps/riscv/stackinfo.h: Likewise.
	* sysdeps/riscv/bits/fenv.h: New file.
	* sysdeps/riscv/e_sqrtl.c: Likewise.
	* sysdeps/riscv/fpu_control.h: Likewise.
	* sysdeps/riscv/math-tests.h: Likewise.
	* sysdeps/riscv/nofpu/Implies: Likewise.
	* sysdeps/riscv/sfp-machine.h: Likewise.
	* sysdeps/riscv/tininess.h: Likewise.
	* sysdeps/riscv/rv64/rvd/s_ceil.c: New file.
	* sysdeps/riscv/rv64/rvd/s_floor.c: Likewise.
	* sysdeps/riscv/rv64/rvd/s_llrint.c: Likewise.
	* sysdeps/riscv/rv64/rvd/s_llround.c: Likewise.
	* sysdeps/riscv/rv64/rvd/s_lrint.c: Likewise.
	* sysdeps/riscv/rv64/rvd/s_lround.c: Likewise.
	* sysdeps/riscv/rv64/rvd/s_nearbyint.c: Likewise.
	* sysdeps/riscv/rv64/rvd/s_rint.c: Likewise.
	* sysdeps/riscv/rv64/rvd/s_round.c: Likewise.
	* sysdeps/riscv/rv64/rvd/s_roundeven.c: Likewise.
	* sysdeps/riscv/rv64/rvd/s_trunc.c: Likewise.